traversal.snake.Snake.scala.error
Compilation error:
Snake:1: error: Missing closing brace `}' assumed here
override def run() {def positionFinale() {//if (estFaceMur()(&&getDirection()==Direction.EST)) {gauche();return estFaceMur()}
^Snake:1: error: expected start of definition
override def run() {def positionFinale() {//if (estFaceMur()(&&getDirection()==Direction.EST)) {gauche();return estFaceMur()}
         ^